----------------------------------------------------------------------
 OmegaT 2.2.3 update 1
----------------------------------------------------------------------
  1 Enhancement
  0 Bugfix
----------------------------------------------------------------------
2.2.3 update 1 vs. 2.2.3


  Other enhancements:

  - Hungarian localisation updated to 2.2.3 (UI, documentation, readme)

  Bug fix:

  - HTML cryptic error message "StringIndexOutOfBoundsException"
  http://sourceforge.net/support/tracker.php?aid=1653822

----------------------------------------------------------------------
 OmegaT 2.2.3
----------------------------------------------------------------------
  9 Enhancements
  1 Bugfix
----------------------------------------------------------------------
2.2.3 vs. 2.2.2 update 1


  Implemented requests:

  - Accept script in language code for documents
  http://sourceforge.net/support/tracker.php?aid=3139010

  - Add a TTX filter
  http://sourceforge.net/support/tracker.php?aid=1851513

  - Proxy authentication for machine translation
  http://sourceforge.net/support/tracker.php?aid=3132893

  Other enhancements:

  - Typo3 l10nmgr File Filter

  - Belarusian localisation updated to 2.2.1 update 1 (UI)
  - Italian localisation updated to 2.2.2 update 1 (UI)
  - Catalan localisation updated to 2.2.2 update 1 (UI, Readme, documentation)
  - Dutch localisation updated to 2.2.2 (UI, documentation)
  - Japanese localisation updated to 2.2.3 (UI)

  Bug fix:

  - When a paragraph-based TMX was resegmented to sequence mode, the 
source language rules were used to segment the target paragraph

----------------------------------------------------------------------
 OmegaT 2.2.2 update 1
----------------------------------------------------------------------
  0 Enhancement
  1 Bugfix
----------------------------------------------------------------------
2.2.2 update 1 vs. 2.2.2

  Bug fix:

  - XML entities in non translatable attributes were not converted back