@@ -936,6 +936,7 @@ OpenDoc_TRANSLATE_NOTES=&Notes
 OpenDoc_TRANSLATE_COMMENTS=&Comments
 OpenDoc_TRANSLATE_PRES_NOTES=&Presentation notes
 OpenDoc_TRANSLATE_LINKS=Links (&URL)
+OpenDoc_TRANSLATE_SHEET_NAMES=&Sheet Names
 OpenDoc_ERROR_IN_FILE=Error in file
 
 # org.omegat.filters3.xml.openxml.OpenXMLFilter
