@@ -62,6 +62,7 @@ public class EditOpenDocOptionsDialog extends javax.swing.JDialog {
         translateCommentsCB.setSelected(options.getTranslateComments());
         translatePresNotesCB.setSelected(options.getTranslatePresNotes());
         translateLinksCB.setSelected(options.getTranslateLinks());
+        translateSheetNamesCB.setSelected(options.getTranslateSheetNames());
 
         // Handle escape key to close the window
         KeyStroke escape = KeyStroke.getKeyStroke(KeyEvent.VK_ESCAPE, 0, false);
@@ -93,7 +94,7 @@ public class EditOpenDocOptionsDialog extends javax.swing.JDialog {
      * regenerated by the Form Editor.
      */
     // <editor-fold defaultstate="collapsed"
-    // desc="Generated Code">//GEN-BEGIN:initComponents
+    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
     private void initComponents() {
 
         buttonGroup1 = new javax.swing.ButtonGroup();
@@ -109,9 +110,9 @@ public class EditOpenDocOptionsDialog extends javax.swing.JDialog {
         translateCommentsCB = new javax.swing.JCheckBox();
         translatePresNotesCB = new javax.swing.JCheckBox();
         translateLinksCB = new javax.swing.JCheckBox();
-        jLabel1 = new javax.swing.JLabel();
+        translateSheetNamesCB = new javax.swing.JCheckBox();
 
-        setTitle(OStrings.getString("OpenDoc_FILTER_OPTIONS"));
+        setTitle(OStrings.getString("OpenDoc_FILTER_OPTIONS")); // NOI18N
         setCursor(new java.awt.Cursor(java.awt.Cursor.DEFAULT_CURSOR));
         setResizable(false);
         addWindowListener(new java.awt.event.WindowAdapter() {
@@ -123,7 +124,7 @@ public class EditOpenDocOptionsDialog extends javax.swing.JDialog {
         buttonPanel.setMinimumSize(new java.awt.Dimension(143, 33));
         buttonPanel.setLayout(new java.awt.FlowLayout(java.awt.FlowLayout.RIGHT));
 
-        org.openide.awt.Mnemonics.setLocalizedText(okButton, OStrings.getString("BUTTON_OK"));
+        org.openide.awt.Mnemonics.setLocalizedText(okButton, OStrings.getString("BUTTON_OK")); // NOI18N
         okButton.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 okButtonActionPerformed(evt);
@@ -131,7 +132,7 @@ public class EditOpenDocOptionsDialog extends javax.swing.JDialog {
         });
         buttonPanel.add(okButton);
 
-        org.openide.awt.Mnemonics.setLocalizedText(cancelButton, OStrings.getString("BUTTON_CANCEL"));
+        org.openide.awt.Mnemonics.setLocalizedText(cancelButton, OStrings.getString("BUTTON_CANCEL")); // NOI18N
         cancelButton.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 cancelButtonActionPerformed(evt);
@@ -145,13 +146,12 @@ public class EditOpenDocOptionsDialog extends javax.swing.JDialog {
         jPanel1.setMinimumSize(new java.awt.Dimension(167, 121));
         jPanel1.setLayout(new java.awt.GridLayout(0, 1));
 
-        java.util.ResourceBundle bundle = java.util.ResourceBundle.getBundle("org/omegat/Bundle");
-        org.openide.awt.Mnemonics.setLocalizedText(jLabel2, bundle.getString("OpenDoc_TRANSLATE_ELEMENTS"));
+        java.util.ResourceBundle bundle = java.util.ResourceBundle.getBundle("org/omegat/Bundle"); // NOI18N
+        org.openide.awt.Mnemonics.setLocalizedText(jLabel2, bundle.getString("OpenDoc_TRANSLATE_ELEMENTS")); // NOI18N
         jPanel1.add(jLabel2);
 
         translateIndexesCB.setSelected(true);
-        org.openide.awt.Mnemonics.setLocalizedText(translateIndexesCB,
-                bundle.getString("OpenDoc_TRANSLATE_INDEXES"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateIndexesCB, bundle.getString("OpenDoc_TRANSLATE_INDEXES")); // NOI18N
         translateIndexesCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateIndexesCBradiosActionPerformed(evt);
@@ -159,8 +159,7 @@ public class EditOpenDocOptionsDialog extends javax.swing.JDialog {
         });
         jPanel1.add(translateIndexesCB);
 
-        org.openide.awt.Mnemonics.setLocalizedText(translateBookmarksCB,
-                bundle.getString("OpenDoc_TRANSLATE_BOOKMARKS"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateBookmarksCB, bundle.getString("OpenDoc_TRANSLATE_BOOKMARKS")); // NOI18N
         translateBookmarksCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateBookmarksCBradiosActionPerformed(evt);
@@ -169,8 +168,7 @@ public class EditOpenDocOptionsDialog extends javax.swing.JDialog {
         jPanel1.add(translateBookmarksCB);
 
         translateBookmarkRefsCB.setSelected(true);
-        org.openide.awt.Mnemonics.setLocalizedText(translateBookmarkRefsCB,
-                bundle.getString("OpenDoc_TRANSLATE_BOOKMARKREFS"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateBookmarkRefsCB, bundle.getString("OpenDoc_TRANSLATE_BOOKMARKREFS")); // NOI18N
         translateBookmarkRefsCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateBookmarkRefsCBradiosActionPerformed(evt);
@@ -179,8 +177,7 @@ public class EditOpenDocOptionsDialog extends javax.swing.JDialog {
         jPanel1.add(translateBookmarkRefsCB);
 
         translateNotesCB.setSelected(true);
-        org.openide.awt.Mnemonics.setLocalizedText(translateNotesCB,
-                bundle.getString("OpenDoc_TRANSLATE_NOTES"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateNotesCB, bundle.getString("OpenDoc_TRANSLATE_NOTES")); // NOI18N
         translateNotesCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateNotesCBradiosActionPerformed(evt);
@@ -189,8 +186,7 @@ public class EditOpenDocOptionsDialog extends javax.swing.JDialog {
         jPanel1.add(translateNotesCB);
 
         translateCommentsCB.setSelected(true);
-        org.openide.awt.Mnemonics.setLocalizedText(translateCommentsCB,
-                bundle.getString("OpenDoc_TRANSLATE_COMMENTS"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateCommentsCB, bundle.getString("OpenDoc_TRANSLATE_COMMENTS")); // NOI18N
         translateCommentsCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translateCommentsCBradiosActionPerformed(evt);
@@ -199,8 +195,7 @@ public class EditOpenDocOptionsDialog extends javax.swing.JDialog {
         jPanel1.add(translateCommentsCB);
 
         translatePresNotesCB.setSelected(true);
-        org.openide.awt.Mnemonics.setLocalizedText(translatePresNotesCB,
-                bundle.getString("OpenDoc_TRANSLATE_PRES_NOTES"));
+        org.openide.awt.Mnemonics.setLocalizedText(translatePresNotesCB, bundle.getString("OpenDoc_TRANSLATE_PRES_NOTES")); // NOI18N
         translatePresNotesCB.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(java.awt.event.ActionEvent evt) {
                 translatePresNotesCBradiosActionPerformed(evt);
@@ -208,21 +203,18 @@ public class EditOpenDocOptionsDialog extends javax.swing.JDialog {
         });
         jPanel1.add(translatePresNotesCB);
 
-        org.openide.awt.Mnemonics.setLocalizedText(translateLinksCB,
-                OStrings.getString("OpenDoc_TRANSLATE_LINKS"));
+        org.openide.awt.Mnemonics.setLocalizedText(translateLinksCB, OStrings.getString("OpenDoc_TRANSLATE_LINKS")); // NOI18N
         jPanel1.add(translateLinksCB);
 
-        org.openide.awt.Mnemonics.setLocalizedText(jLabel1,
-                "                                                                       ");
-        jLabel1.setEnabled(false);
-        jPanel1.add(jLabel1);
+        org.openide.awt.Mnemonics.setLocalizedText(translateSheetNamesCB, OStrings.getString("OpenDoc_TRANSLATE_SHEET_NAMES")); // NOI18N
+        jPanel1.add(translateSheetNamesCB);
 
         getContentPane().add(jPanel1, java.awt.BorderLayout.CENTER);
 
         pack();
         java.awt.Dimension screenSize = java.awt.Toolkit.getDefaultToolkit().getScreenSize();
         java.awt.Dimension dialogSize = getSize();
-        setLocation((screenSize.width - dialogSize.width) / 2, (screenSize.height - dialogSize.height) / 2);
+        setLocation((screenSize.width-dialogSize.width)/2,(screenSize.height-dialogSize.height)/2);
     }// </editor-fold>//GEN-END:initComponents
 
     private void translateCommentsCBradiosActionPerformed(java.awt.event.ActionEvent evt) {// GEN-FIRST:event_translateCommentsCBradiosActionPerformed
@@ -253,6 +245,7 @@ public class EditOpenDocOptionsDialog extends javax.swing.JDialog {
         options.setTranslateComments(translateCommentsCB.isSelected());
         options.setTranslatePresNotes(translatePresNotesCB.isSelected());
         options.setTranslateLinks(translateLinksCB.isSelected());
+        options.setTranslateSheetNames(translateSheetNamesCB.isSelected());
 
         doClose(RET_OK);
     }// GEN-LAST:event_okButtonActionPerformed
@@ -282,7 +275,6 @@ public class EditOpenDocOptionsDialog extends javax.swing.JDialog {
     private javax.swing.ButtonGroup buttonGroup1;
     private javax.swing.JPanel buttonPanel;
     private javax.swing.JButton cancelButton;
-    private javax.swing.JLabel jLabel1;
     private javax.swing.JLabel jLabel2;
     private javax.swing.JPanel jPanel1;
     private javax.swing.JButton okButton;
@@ -293,5 +285,6 @@ public class EditOpenDocOptionsDialog extends javax.swing.JDialog {
     private javax.swing.JCheckBox translateLinksCB;
     private javax.swing.JCheckBox translateNotesCB;
     private javax.swing.JCheckBox translatePresNotesCB;
+    private javax.swing.JCheckBox translateSheetNamesCB;
     // End of variables declaration//GEN-END:variables
 }
